# Freedman_Bank_adDataAnalysis

./: .gitignore  README.md  adSimilarity.csv  adSimilarity.ipynb  adSimilarity.json  adSimilarity.py  adSimilarity.xlsx  inference.ipynb  main.py  mainController.ipynb  prescriptive_stereotypes_embeddings.npy  pyproject.toml  requirements.txt  test.ipynb
.archive/: adSimilarity.ipynb  createTokensFromAd.py  data_reformat.py  data_wrapper.py
.archive/oldData/: db.dta
.archive/updatedDictionaryEmbeddings/: 05_resource.npy  08_prosperity.npy
Scripts/: adSimilarity.py  adsApi.py  createTokensFromAd.py
adEmbeddings/: SentimentVal_dataset_nov23.xlsx  adEmbeddingGeneration.ipynb  sentimentAnalysis.ipynb  sentimentAnalysis.py
archive/: adSimilarity.py  adsApi.py  dictionaryEmbeddings.json  main.py
data_src/: data_reformat.py  dataset_nov23.json  dataset_nov23.xlsx  reading.r  understanding_data.py
dictionaryEmbeddings/: Dictionaries_v5.xlsx  dictionaryEmbeddingGeneration.ipynb  dictionaryEmbeddings.json  serializedDictionaryEmbeddings_split.pkl  serializedDictionaryEmbeddings_unified.pkl
similarityValues/: AdSimilarity_split.csv  AdSimilarity_split.json  AdSimilarity_split.xlsx  AdSimilarity_unified.csv  AdSimilarity_unified.json  AdSimilarity_unified.xlsx  AdSimilarity_v2.csv  AdSimilarity_v2.json  AdSimilarity_v2.xlsx  finbert-ads-finbert-dictionary.xlsx  finbert-ads-roberta-dictionary.xlsx  vals.xlsx
staticEmbeddings/: dictionaries.xlsx  dictionaryEmbeddingGeneration.ipynb  embeddingGeneration.ipynb  serializedDictionaryEmbeddings.pkl
(+12 files in other folders)
