[tool.poetry]
name = "freedman-bank-addataanalysis"
version = "0.1.0"
description = "Environment setup configurations (updated as of tokenization)"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "4.34.0"
torch = "2.1.0"
pandas = "2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
