[tool.poetry]
name = "freedman-bank-addataanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.0"
pandas = "2.1.1"
transformers = "4.34.0"
torch = "2.1.0"
scikit-learn = "1.3.1"

openpyxl = "3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
